基本实现双向绑定功能

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,8 @@
                 }
             }
         });
+
+        vm.$watch('anyStr', () => console.log('anyStr changed'));
     </script>
 </body>
 </html>
